--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -16,45 +16,8 @@
         </div>
     </div>
 
-    <!-- Search Form -->
-    <div class="card mb-4" style="border-color: var(--neutral);">
-        <div class="card-body">
-            <form method="get" action="{% url 'customers:customer_list' %}">
-                <div class="row mb-3">
-                    <div class="col-md-12">
-                        <div class="input-group">
-                            {{ form.search }}
-                            <button type="submit" class="btn" style="background-color: var(--primary); color: white;">
-                                <i class="fas fa-search"></i> بحث
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">                    <div class="col-md-3 mb-2">
-                        <label for="{{ form.category.id_for_label }}" class="form-label">التصنيف</label>
-                        {{ form.category }}
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <label for="{{ form.branch.id_for_label }}" class="form-label">الفرع</label>
-                        {{ form.branch }}
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <label for="{{ form.customer_type.id_for_label }}" class="form-label">نوع العميل</label>
-                        {{ form.customer_type }}
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <label for="{{ form.status.id_for_label }}" class="form-label">الحالة</label>
-                        {{ form.status }}
-                    </div>
-                    <div class="col-md-3 mb-2 d-flex align-items-end">
-                        <a href="{% url 'customers:customer_list' %}" class="btn btn-outline-secondary w-100">
-                            <i class="fas fa-redo"></i> إعادة تعيين
-                        </a>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+    <!-- Customers Filter -->
+    {% include 'includes/customers_filter.html' %}
 
     <!-- Customers List -->
     <div class="card" style="border-color: var(--neutral);">
